minor correction done

--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -1,13 +1,34 @@
-.name {
-    width: 15%;
-    text-align: start;
-    border-radius: 5%;
-    background: bisque;
-    padding: 1%;
+.starWarsList {
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+    margin: 2%;
 }
 
+
+.starWars {
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+    margin: 2%;
+}
+
+.starWars:hover {
+    background: rgb(199, 185, 169);
+    border-radius: 5%;
+}
+
+.name {
+    width: 80%;
+    text-align: start;
+    color: rgb(177, 97, 6);
+    padding: 1%;
+    margin: 2%;
+}
+
+
 .starNamedata {
-    width: 15%;
+    width: 50%;
     text-align: start;
     padding: 1%;
     background:transparent;
